overflow issue resolved on mobile

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ html {
   padding: 0 2rem;
   background-color: white;
   margin: 2rem auto;
-  height: 600px;
+  height: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,7 +20,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 95vh;
+  height: 100%;
 }
 
 .about-section {
@@ -47,13 +47,21 @@ html {
   font-size: 1rem;
 }
 
-body {
+.over-flow-container {
+  width: 100vw;
+  position: relative;
+  overflow-x: hidden;
+}
+
+body,
+html {
   box-sizing: border-box;
   font-family: 'Noto Sans', sans-serif;
   font-weight: 700;
   font-size: 1.5rem;
-  min-width: 400px;
+  /* min-width: 400px; */
   width: 100%;
+
   overflow-x: hidden;
   position: relative;
   color: #2c3e50;
@@ -131,7 +139,7 @@ header p {
 }
 
 .description {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   margin: 1rem;
 }
 
